--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Provide APIs for card.neau.edu.cn data crawler",
   "private": false,
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "egg": "^1.9.0",
     "egg-scripts": "^2.1.0"
   },
