--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-logs/
-npm-debug.log
-yarn-error.log
-node_modules/
-package-lock.json
-yarn.lock
-coverage/
-.idea/
-run/
-.DS_Store
-*.swp
+*.code-workspace
