--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neau-card",
+  "name": "neau-card-backend",
   "version": "0.0.1",
   "description": "Provide APIs for card.neau.edu.cn data crawler",
   "private": false,
@@ -38,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:BlueSky1997AL/neau-card.git"
+    "url": "https://github.com/BlueSky1997AL/neau-card.git"
   },
   "author": "Jser@Allen Lawrence",
   "license": "MIT"
