--- a/webdev/package.json
+++ b/webdev/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "fastclick": "^1.0.6",
     "vue": "^2.5.8",
     "vue-router": "^2.2.0",
